Fix warning which apear in commit miw-upm/goa#42